@@ -1,3 +1,8 @@
+Wed Jul 27 15:39:14 2011  Eric Hodel  <drbrain@segment7.net>
+
+	* object.c:  Add usage documentation for BasicObject.  Based on patch
+	  by Thomas Sawyer.  [Ruby 1.9 - Bug #5067]
+
 Wed Jul 27 12:24:17 2011  Eric Hodel  <drbrain@segment7.net>
 
 	* lib/rubygems/uninstaller.rb:  Add missing require and update
